ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: lemonbox
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
  namespace: default
spec:
  rules:
    - host: ec2-52-83-66-128.cn-northwest-1.compute.amazonaws.com.cn
      http:
        paths:
          - path: /java(/|$)(.*)
            backend:
              serviceName: stress-java
              servicePort: 8080
    - host: ec2-52-83-66-128.cn-northwest-1.compute.amazonaws.com.cn
      http:
        paths:
          - path: /node(/|$)(.*)
            backend:
              serviceName: stress-node
              servicePort: 3000
